feat: add steps section to header

--- a/patterns/drive-homepage/index.html
+++ b/patterns/drive-homepage/index.html
@@ -22,7 +22,21 @@
         </picture>
       </div>
       <div class="hero__header">
-        <p-display theme="dark" align="center" size="small" tag="h1" id="hero-heading">Ungebunden Porsche fahren auf Abruf</p-display>
+        <p-display theme="dark" align="center" size="small" tag="h1" id="hero-heading">Ungebunden Porsche fahren auf Abruf.</p-display>
+        <div class="steps">
+          <div class="steps__item">
+            <span>Mietstation auswählen</span>
+          </div>
+          <div class="steps__item">
+            <span>Porsche auswählen</span>
+          </div>
+          <div class="steps__item">
+            <span>Zeitraum auswählen</span>
+          </div>
+          <div class="steps__item">
+            <span>Abholen und losfahren</span>
+          </div>
+        </div>
       </div>
     </section>
 
