feat: add rent section

--- a/patterns/drive-homepage/index.html
+++ b/patterns/drive-homepage/index.html
@@ -40,6 +40,13 @@
       </div>
     </section>
 
+    <section class="rent">
+      <div class="rent__cta">
+        <p-text size="medium" color="contrast-high" align="center">Flexible Mietoptionen ermöglichen eine große Auswahl an Modellen und unbegrenzte Freikilometer. Genießen Sie erstklassigen Service, umfassenden Versicherungsschutz und maximale Freiheit ohne langfristige Bindungen.</p-text>
+        <p-button>Jetzt Fahrzeug reservieren</p-button>
+      </div>
+    </section>
+
     <!-- model chooser -->
     <section class="model-chooser" aria-label="Wählen Sie Ihr Porsche Modell">
       <p-carousel width="extended" slides-per-page="2" focus-on-center-slide="true" trim-space="false" gradient-color="background-base" align-header="center" heading="Welcher darf es heute sein?" description="Unsere Porsche Standorte bieten Ihnen eine vielfältige Modellauswahl und erfüllen gerne Ihre individuellen Wünsche.">
