feat: add benefits section

--- a/patterns/drive-homepage/index.html
+++ b/patterns/drive-homepage/index.html
@@ -79,8 +79,41 @@
     <!-- benefits -->
     <section class="benefits" aria-labelledby="benefits">
       <p-heading size="large" tag="h2" id="benefits">Warum Porsche Drive?</p-heading>
-      <div class="mood -p-mt-m-fluid">
-        <img srcset="assets/partner-teaser@2x.webp 2x" src="assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
+      <div class="benefits__item">
+        <div class="mood">
+          <img srcset="assets/partner-teaser@2x.webp 2x" src="assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
+        </div>
+        <div class="text">
+          <p-heading size="large">Experience</p-heading>
+          <p-text size="medium" color="contrast-high">Goosebumps, adrenaline: Experience the fascination of sports cars - with all different facets and according to your wishes.</p-text>
+        </div>
+      </div>
+      <div class="benefits__item">
+        <div class="mood">
+          <img srcset="assets/partner-teaser@2x.webp 2x" src="assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
+        </div>
+        <div class="text">
+          <p-heading size="large">Models</p-heading>
+          <p-text size="medium" color="contrast-high">911? 718? Macan? Choose the performance that suits you best from the latest Porsche models.</p-text>
+        </div>
+      </div>
+      <div class="benefits__item">
+        <div class="mood">
+          <img srcset="assets/partner-teaser@2x.webp 2x" src="assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
+        </div>
+        <div class="text">
+          <p-heading size="large">Benefits</p-heading>
+          <p-text size="medium" color="contrast-high">All inclusive: second driver, insurance and plenty of free kilometres. So you can fully concentrate on the essential: driving.</p-text>
+        </div>
+      </div>
+      <div class="benefits__item">
+        <div class="mood">
+          <img srcset="assets/partner-teaser@2x.webp 2x" src="assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
+        </div>
+        <div class="text">
+          <p-heading size="large">Service</p-heading>
+          <p-text size="medium" color="contrast-high">Top performance - far beyond the vehicle. Porsche Drive Rental offers you a personal handover and a comprehensive instruction.</p-text>
+        </div>
       </div>
     </section>
   </main>
