--- a/patterns/drive-homepage/index.html
+++ b/patterns/drive-homepage/index.html
@@ -37,6 +37,52 @@
           </div>
         </div>
       </div>
+      <div class="reserve">
+        <div class="reserve__container">
+          <div class="reserve__heading">
+            <p-heading size="medium">Jetzt Porsche reservieren</p-heading>
+            <p-link-pure icon="none" underline="true" href="#requirements">Mehr Informationen</p-link-pure>
+          </div>
+          <div class="reserve__form">
+            <form action="#" onsubmit="alert('submit'); return false;">
+              <p-text-field-wrapper label="Some label" action-icon="locate" hide-label="true">
+                <input type="search" name="some-name" placeholder="Mietstation auswählen" />
+              </p-text-field-wrapper>
+              <p-text-field-wrapper label="Some label" hide-label="true">
+                <input type="text" name="some-name" placeholder="Abholung → Rückgabe" />
+              </p-text-field-wrapper>
+              <p-button>Jetzt reservieren</p-button>
+            </form>
+          </div>
+        </div>
+        <div class="reserve__container rental-station-popover">
+          <div class="reserve__heading">
+            <p-heading size="medium">Wähle deine Mietstation</p-heading>
+          </div>
+          <div class="reserve__results">
+            <p-text size="x-small">Suchergebnisse</p-text>
+            <p-button-pure icon="pin" size="medium">Driven by Dreams Stuttgart</p-button-pure>
+            <p-button-pure icon="pin" size="medium">Porsche Museum Stuttgart</p-button-pure>
+            <p-text size="x-small">Beliebte Stationen</p-text>
+            <p-button-pure icon="pin" size="medium">Porsche Zentrum Hamburg</p-button-pure>
+            <p-button-pure icon="pin" size="medium">Porsche Zentrum Osnabrück</p-button-pure>
+            <p-button-pure icon="pin" size="medium">Porsche Zentrum Leipzig</p-button-pure>
+            <p-button-pure icon="pin" size="medium">Porsche Zentrum Hamburg</p-button-pure>
+            <p-button-pure icon="pin" size="medium">Porsche Zentrum Hamburg</p-button-pure>
+            <p-button-pure icon="pin" size="medium">Porsche Zentrum Osnabrück</p-button-pure>
+            <p-button-pure icon="pin" size="medium">Porsche Zentrum Leipzig</p-button-pure>
+            <p-button-pure icon="pin" size="medium">Porsche Zentrum Hamburg</p-button-pure>
+          </div>
+          <div class="reserve__img">
+            <img srcset="assets/partner-teaser@2x.webp 2x" src="assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
+            <p-text theme="dark" size="large">Driven by Dreams Stuttgart</p-text>
+            <p-text theme="dark">
+              Dorotheen Quartier Marktstraße 1-3<br />
+              70173 Stuttgart<br />
+              Germany</p-text>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="rent" aria-labelledby="rent">
@@ -143,8 +189,8 @@
       </p-link-tile>
     </section>
 
-    <section class="requirements" aria-labelledby="requirements">
-      <p-heading size="large" tag="h2" id="requirements" align="center">Anforderungen</p-heading>
+    <section class="requirements" id="requirements" aria-labelledby="requirement">
+      <p-heading size="large" tag="h2" id="requirement" align="center">Anforderungen</p-heading>
       <div class="requirements__container">
         <div class="requirements__box">
           <p-icon name="user" aria="{ 'aria-label': 'User icon' }"></p-icon>
